I changed so much i don't even remember what i changed, took 4+ hours of work to make this